Fix wrapping on dashboard.

--- a/asset/css/scripto.css
+++ b/asset/css/scripto.css
@@ -300,6 +300,7 @@
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
+    flex-wrap: wrap;
 }
 
 .scripto.dashboard .panel {
